Revision history for Plack::Middleware::Auth::Form.

0.001     2011-02-26
    First release.

0.002     2011-02-27
    No "use feature ':5.10'".

0.005     2011-03-01
    File::Spec to get the app.psgi file in tests.

0.006     2011-03-01
    Docs improvements

0.008     2011-03-05
    Some prerequisites added

0.009     2011-05-23
    More compliance with the PSGI spec:
    Prefix for login form snippet is now 'Plack::Middleware::Auth::Form.LoginForm'
    HTTP headers are now array reference (tokuhirom)

0.010     2011-08-04
    Experimental _wrap_body method (by chromatic)
    ssl_port parameter added

{{$NEXT}}
    session fixation attack protection (by hayajo)
    session usage explanations (suggested by Kaare Rasmussen)
    user dependent redirection page (suggested by Kaare Rasmussen)
