@@ -3,7 +3,7 @@ author  = Zbigniew Lukasiak <zby@cpan.org>
 license = Artistic_2_0
 copyright_holder = Zbigniew Lukasiak <zby@cpan.org>
 copyright_year   = 2011
-version = 0.010
+version = 0.011
 
 [@Basic]
 [AutoPrereqs]
